# ptarmigan-flow

./: README.ja.md  README.llm.md  README.md  config.example.toml  pyproject.toml
Formula/: moonshine-flow.rb  ptarmigan-flow.rb
scripts/: install_brew.sh
src/moonshine_flow/: activity_indicator.py  activity_overlay.py  cli.py  config.py  daemon.py  output_injector.py  transcriber.py
src/moonshine_flow/ports/: runtime.py
src/moonshine_flow/presentation/cli/: commands.py
src/moonshine_flow/stt/: __init__.py  base.py  factory.py  mlx_whisper.py  moonshine.py  server.py  vllm_realtime.py  voxtral_mlx.py  voxtral_transformers.py
src/moonshine_flow/text_processing/: llm.py
tests/: test_activity_indicator.py  test_activity_overlay.py  test_cli.py  test_config.py  test_daemon.py  test_formula_regressions.py  test_llm_post_processor.py  test_mlx_whisper_backend.py  test_output_injector.py  test_stt_factory.py  test_transcriber.py  test_transcription_session.py  test_vllm_realtime.py  test_voxtral_mlx_backend.py  test_voxtral_transformers_backend.py
